Made the page look better on mobile devices by fixing marin on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,12 @@
 body{
   background-color: #3D5A6C;
 }
+#mapdiv{
+  margin-top: 20px;
+}
+
+@media (max-width: 767.98px){
+  #mapdiv{
+    margin-top: 0px;
+  }
+}
